force-app/main/default/objects/Invoicelineitem__c/Invoicelineitem__c.object-meta.xml
<CustomObject>
    <label>Invoicelineitem</label>
    <nameField>
        <label>Invoicelineitem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoicelineitems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>