force-app/main/default/objects/Invoicelineitem__c/fields/Quickbooks_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>