force-app/main/default/objects/Invoicelineitem__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Invoice__c</columns>
    <columns>Product_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Total_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>contains</operation>
        <value>membership</value>
    </filters>
    <label>ALL</label>
</ListView>