force-app/main/default/objects/Invoicelineitem__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Invoice__c</columns>
    <columns>Product_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice__c</field>
        <operation>equals</operation>
        <value>Invoice MD0000158</value>
    </filters>
    <label>All</label>
</ListView>